vpcStackTemplate.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: >
  The template is used to create a VPC with CIDR provided as parameter.

# Metadata:
#   template metadata

Parameters:
  VPCCIDR: 
    Description: The CIDR(/16) value for VPC
    Type: String
    Default: 10.0.0.0/16
    #Regex to check CIDR
    AllowedPattern: ^(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}(\/16)$
# (\/([0-9]|[1-2][0-9]|3[0-2]))$  If we need to match CIDR prefix of 0-32
    ConstraintDescription: Please enter a valid CIDR.

# Rules:
#   set of rules

# Mappings:
#   set of mappings

# Conditions:
#   set of conditions

# Transform:
#   set of transforms

Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: myVPC

  publicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId: !Ref myVPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnetVPC

  privateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId: !Ref myVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PrivateSubnetVPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: routeTableVPC

  igwName:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: internetGatewayVPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref myVPC
      InternetGatewayId: !Ref igwName
  
  routeName:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref igwName

  routeTableAssocName:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet
      RouteTableId: !Ref PublicRouteTable

  secSSHJumpbox:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SSHJumpbox
      GroupDescription: Security Group to Allow SSH connections into Jumpbox
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: sg-Jumpbox-SSH

  secSSHPrivate:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SSHPrivateInstances
      GroupDescription: Security Group to Allow SSH connections into Private Instances
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref secSSHJumpbox
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: sg-Jumpbox-SSH
          
  jumpBoxEC2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: jumpbox
      ImageId: ami-09d3b3274b6c5d4aa
      InstanceType: t2.micro
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      SubnetId: !Ref publicSubnet
      SecurityGroupIds:
        - !Ref secSSHJumpbox
      Tags:
        - Key: Name
          Value: jumpBox    

  webServerEc2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: jumpbox
      ImageId: ami-09d3b3274b6c5d4aa
      InstanceType: t2.micro
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      SubnetId: !Ref privateSubnet
      SecurityGroupIds:
        - !Ref secSSHPrivate
      Tags:
        - Key: Name
          Value: webServer     

# Outputs:
#   set of outputs
